fix: adjust to grader resource requirement and remove docker dev volumes
